Fix CSS for dark mode, after breaking it.

--- a/static/style.css
+++ b/static/style.css
@@ -504,7 +504,7 @@ body {
 	color: #eaeaea;
 }
 
-.dark a {
+.dark a, .dark .status-uname {
 	color: #81a2be;
 }
 
